# regions

./: .bandit.yaml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .rtd-environment.yml  .run_docker_tests.sh  .travis.yml  CHANGES.rst  CITATION.cff  CITATION.rst  LICENSE.rst  MANIFEST.in  README.md  README.rst  RELEASING.rst  appveyor.yml  azure-pipelines.yml  codecov.yml  conftest.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: check_changelog.yml  check_milestone.yml  ci_cron_daily.yml  ci_cron_weekly.yml  ci_tests.yml  codeql.yml  cron_tests.yml  publish.yml
dev/: README.md  regions_parse.py  regions_pyregion_comparison.csv  regions_pyregion_comparison.py
docs/: api.rst  changelog.rst  common_links.txt  compound.rst  conf.py  contains.rst  contributing.rst  crtf.rst  development.rst  ds9.rst  ds9_io.rst  epilogue.rst  fits_io.rst  fits_region.rst  getting_started.rst  index.rst  install.rst  installation.rst  license.rst  masks.rst  metadata.rst  moc.rst  nitpick-exceptions.txt  plot_compound.py  plot_example.py  plot_example_pix.py  plot_image.reg  plot_reg.py  plotting.rst  references.txt  region_io.rst  shapely.rst  shapes.rst  spherical_bounding_regions.rst  spherical_frame_transform.rst  stcs_io.rst  substitutions.txt  unified.rst
docs/development/: contributing.rst  contributors.rst  index.rst  license.rst  releasing.rst
docs/getting_started/: citation.rst  example.rst  examples.rst  getting_started.rst  index.rst  install.rst  overview.rst
docs/moc/: moc.rst  plot_contains.py  plot_logical_operations.py  plot_moc.py  plot_moc_no_cast.py  plot_polygon.py
docs/reference/: index.rst
docs/release_notes/: index.rst
docs/user_guide/: aa.txt  compound.rst  contains.rst  ds9_io.rst  fits_io.rst  index.rst  masks.rst  metadata.rst  plotting.rst  region_io.rst  shapely.rst  shapes.rst  spherical_bounding_regions.rst  spherical_frame_transform.rst
regions/: CITATION.rst  __init__.py  circle.py  compound.py  conftest.py  core.py  pixcoord.py  polygon.py
regions/_geometry/: README.md  __init__.py  circle_overlap.pyx  circular_overlap.pyx  core.pxd  core.pyx  ellipse_overlap.pyx  elliptical_overlap.pyx  pnpoly.pxd  pnpoly.pyx  polygon_contains.pxd  polygon_contains.pyx  polygonal_overlap.pyx  rectangle_overlap.pyx  rectangular_overlap.pyx  rotate_polygon.py
regions/_geometry/tests/: test_circle_overlap_grid.py  test_circular_overlap_grid.py  test_ellipse_overlap.py  test_elliptical_overlap_grid.py  test_polygon_overlap.py  test_rectangle_overlap_grid.py  test_rectangular_overlap_grid.py  test_thread_safety.py
regions/_utils/: __init__.py  examples.py  optional_deps.py  spherical_helpers.py  wcs_helpers.py
regions/_utils/tests/: conftest.py  test_examples.py  test_wcs_helpers.py
regions/core/: __init__.py  attributes.py  bounding_box.py  compound.py  connect.py  core.py  mask.py  metadata.py  pixcoord.py  regionlist.py  regions.py  registry.py
regions/core/tests/: test_bounding_box.py  test_compound.py  test_core.py  test_mask.py  test_metadata.py  test_pixcoord.py  test_regions.py
regions/io/: __init__.py  connect.py  core.py  ds9_language.py  read_ds9.py  setup_package.py  write_ds9.py
regions/io/crtf/: __init__.py  connect.py  core.py  io_core.py  read.py  setup_package.py  write.py
regions/io/crtf/new_casa_tests/: casa_mask_test.py
regions/io/crtf/test/: test_crtf_language.py
regions/io/crtf/tests/: test_casa_mask.py  test_crtf.py  test_crtf_language.py  test_io_core.py
regions/io/ds9/: __init__.py  connect.py  core.py  meta.py  read.py  setup_package.py  write.py
regions/io/ds9/tests/: test_ds9.py  test_ds9_language.py
regions/io/fits/: __init__.py  connect.py  core.py  read.py  setup_package.py  write.py
regions/io/fits/tests/: test_fits.py  test_fits_region.py
regions/io/stcs/: README.md  __init__.py  connect.py  core.py  example_usage.py  read.py  write.py
regions/io/stcs/tests/: test_stcs.py
regions/io/tests/: profile_ds9_parser.py  profile_pyregion.py  test_core.py  test_ds9_language.py  test_physical.py  test_shape_object.py  test_unified.py
regions/io/tests/data/: ds9.ecliptic.reg  ds9.ecliptic.strip.reg  ds9.fk4.hms.reg  ds9.fk4.hms.strip.reg  ds9.fk4.reg  ds9.fk5.strip.reg  ds9.linear.wcsa.reg  ds9.linear.wcsc.reg  ds9.mosaic.fk4.reg  ds9.mosaic.galactic.reg  ds9.mosaic.icrs.reg  fk5_reference.reg  fk5_strip_reference.reg  galactic_reference.reg  physical_reference.reg
regions/io/tests/regions/: ds9.fk5.hms.reg  ds9.galactic.hms.strip.reg  ds9.galactic.reg  ds9.galactic.strip.reg  ds9.icrs.hms.reg  ds9.icrs.reg  ds9.linear.wcsi.reg  ds9.physical.strip.reg
regions/shapes/: __init__.py  annulus.py  circle.py  ellipse.py  line.py  lune.py  point.py  polygon.py  range.py  rectangle.py  setup_package.py  text.py  utils.py  whole_sky.py
regions/shapes/masking/: __init__.py
regions/shapes/moc/: __init__.py  abstract_moc.py  boundaries.py  core.py  interval_set.py  moc.py  polygon.py  py23_compat.py  utils.py
regions/shapes/moc/plot/: axis_viewport.py  border.py  culling_backfacing_cells.py  fill.py  utils.py  wcs.py
regions/shapes/tests/: setup_package.py  test_annulus.py  test_api.py  test_circle.py  test_common.py  test_conversions.py  test_ellipse.py  test_interval_set.py  test_line.py  test_lune.py  test_masks.py  test_moc.py  test_moc_from_polygon.py  test_pixel_sky_conversions.py  test_point.py  test_polygon.py  test_range.py  test_rectangle.py  test_text.py  test_to_polygon.py  test_whole_sky.py  utils.py
regions/shapes/tests/data/: P-GALEXGR6-AIS-FUV.fits  P-SDSS9-r.fits  example_header.fits
regions/shapes/tests/reference/: test_to_mask_circ-mode_exact.txt  test_to_mask_circ-mode_subpixels-subpixels_1.txt  test_to_mask_circ-mode_subpixels-subpixels_18.txt  test_to_mask_circ-mode_subpixels-subpixels_5.txt  (+12 more)
regions/tests/: coveragerc  helpers.py  setup_package.py  test_polygon.py
regions/utils/: __init__.py  examples.py  positions_to_extents.py  wcs_helpers.py
regions/utils/tests/: test_examples.py
(+56 files in other folders)
