[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.1
norecursedirs = build docs/_build astropy_helpers dist
addopts = --arraydiff -p no:warnings --doctest-ignore-import-errors
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
name = regions
version = 0.5.dev
description = Astropy affilated package for region handling
author = Astropy developers
license = BSD
url = http://github.com/astropy/regions
edit_on_github = False
github_project = astropy/regions

[entry_points]

[pep8]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = sphinx

[flake8]
max-line-length = 100
