[metadata]
name = regions
author = The Astropy Developers
author_email = astropy.team@gmail.com
license = BSD 3-Clause
license_file = LICENSE.rst
url = http://github.com/astropy/regions
description = Astropy coordinated package for region handling
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = astropy/regions

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    numpy>=1.16
    astropy>=2.0

[options.extras_require]
all =
    matplotlib
    shapely
test =
    pytest-astropy
    pytest-arraydiff
    pytest-mpl
docs =
    matplotlib
    shapely
    sphinx-astropy

[options.package_data]
regions = data/*
regions.shapes.tests = baseline/*.fits, data/*.fits
regions.io.crtf.tests = data/*.crtf
regions.io.ds9.tests = data/*.reg
regions.io.fits.tests = data/*.fits

[tool:pytest]
testpaths = "regions" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    regions/_astropy_init*
    regions/conftest.py
    regions/*setup_package*
    regions/tests/*
    regions/*/tests/*
    regions/extern/*
    regions/version*
    */regions/_astropy_init*
    */regions/conftest.py
    */regions/*setup_package*
    */regions/tests/*
    */regions/*/tests/*
    */regions/extern/*
    */regions/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[flake8]
max-line-length = 100
