[metadata]
name = regions
author = The Astropy Developers
author_email = astropy.team@gmail.com
license = BSD 3-Clause
license_file = LICENSE.rst
url = https://github.com/astropy/regions
github_project = astropy/regions
edit_on_github = False
description = Astropy coordinated package for region handling
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = astronomy, astrophysics, astropy, regions
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
    numpy>=1.18
    astropy>=5.0

[options.extras_require]
all =
    matplotlib>=3.1
    shapely
test =
    pytest-astropy
    pytest-arraydiff
docs =
    matplotlib>=3.1
    shapely
    sphinx-astropy

[options.package_data]
regions = data/*
regions.shapes.tests = reference/*.txt, data/*.fits
regions.io.crtf.tests = data/*.crtf
regions.io.ds9.tests = data/*.reg
regions.io.fits.tests = data/*.fits

[tool:pytest]
testpaths = "regions" "docs"
norecursedirs =
    "docs[\/]_build"
    "docs[\/]generated"
    "regions[\/]extern"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
doctest_norecursedirs =
    */setup_package.py
doctest_subpackage_requires =
    docs/plot_*.py = matplotlib>=3.1
filterwarnings =
    error
    ignore:numpy\.ufunc size changed:RuntimeWarning
    ignore:numpy\.ndarray size changed:RuntimeWarning
    ignore:unclosed file:ResourceWarning
    ignore:distutils Version classes are deprecated:DeprecationWarning
markers =
    array_compare

[coverage:run]
omit =
    regions/_astropy_init*
    regions/conftest.py
    regions/*setup_package*
    regions/tests/*
    regions/*/tests/*
    regions/extern/*
    regions/version*
    */regions/_astropy_init*
    */regions/conftest.py
    */regions/*setup_package*
    */regions/tests/*
    */regions/*/tests/*
    */regions/extern/*
    */regions/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[flake8]
max-line-length = 100
